# ZenAgent

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  ONBOARDING.md  PHASE5_REPORT.md  README.md  docker-compose.yml  final_report.py  pyproject.toml  test_final.py  test_simple.py  zena
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
config/apisix/: apisix.yaml  config.yaml
config/gptcache/: config.yaml
config/guardrails/: README.md  __init__.py  example_usage.py  guardrails_config.py  test_guardrails.py
config/nacos/: application.properties
config/oneapi/: config.yaml
config/prefect/: config.toml
docs/: API.md  ARCHITECTURE.md  E2E-Plan.md  E2E_OPTIMIZATION_DESIGN.md  E2E_REPORT.md  M10_SOULTEAM_DESIGN.md  M11_MODELNEXUS_CORE_REFACTOR.md  M8_5_ZENA_CLI_TUI_DESIGN.md  M8_P1_CACHE_ENHANCEMENT_DESIGN.md  M8_P2_INTENT_ROUTING_DESIGN.md  M8_P3_MEMORY_HIERARCHY_DESIGN.md  M8_P4_PERSONALITY_MATRIX_DESIGN.md  MODULE_SYNC.md  Mission.md  ROADMAP.md  TECHNICAL_DEBT_REPORT.md  ZENA_CLI_GUIDE.md
docs/api/: README.md  Runtime.md  SoulTeam.md  SwarmFly.md  ZenAgent.md  index.html  index.md
docs/design/agent-collaboration/: 二次评审报告_P0P1修复验证.md  子智能体运行机制.md  智能体context传递规范.md  智能体八卦路由机制.md  智能体协作开发体系迭代方案.md  智能体协作编排机制.md  智能体调度指南.md  智能体集群运作机制.md  智能体集群运行机制.md  评估报告_智能体协作开发体系迭代方案.md  评审报告_智能体协作开发体系迭代方案.md
docs/plan/: AGENT_TEAM_ARCHITECTURE.md  CI_CD_SYSTEM.md  COLLABORATION_ARCHITECTURE.md  README.md  SUB_AGENT_MECHANISM.md  SWARMFLY_INTEGRATION.md
scripts/: init-github-repo.sh  sync-modelnexus.sh
tests/e2e/: test_full_flow.py  test_m7_robustness.py  test_modelnexus_integration.py  test_phase1_agent_lifecycle.py  test_phase1_event_bus.py  test_phase1_task_dispatch.py  test_phase2_evolution.py  test_phase2_full_task.py  test_phase2_team_collaboration.py  test_phase3_llm_integration.py  test_real_e2e.py  test_real_llm.py  test_retry_mechanism.py  真实LLM测试报告.md
tests/e2e/visual/: runner.py  test_cli_commands.py  test_full_chain.py  test_l0_llminfra.py  test_l1_runtime.py  test_l2_zenagent.py  test_l3_metasoul.py  test_l4_swarmfly.py  test_l5_soulteam.py  test_modelnexus_core.py  test_tui_verify.py  viz.py
tests/integration/: __init__.py  test_agent_creation.py  test_collaboration.py  test_evolution.py  test_integration_simple.py  test_layer_integration.py
