[project]
name = "ZenAgent"
version = "1.0.0"
description = "ZenAgent - Agent 智能体集群完全独立运行平台"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ZenAgent Team", email = "team@ZenAgent.dev"}
]
keywords = ["agent", "ai", "multi-agent", "swarm", "autonomous"]

dependencies = [
    "cryptography>=41.0.0",
    "redis>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
tui = [
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
zena = "packages.ZenAgent.zena.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "packages/*/*/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
